<resources>
    <string name="default_notification_channel_id">1</string>
    <string name="digits_account_number">1 0123456789</string>
    <string name="digits_numeric_space">1 0123456789</string>
    <string name="digits_only">0123456789</string>
    <string name="digits_amount">0123456789,.</string>
    <string name="digits_alpha_numeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="digits_alpha_numeric_symbols">\ abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890.,\n</string>
    <string name="digits_alpha_numeric_symbols_no_space">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890.,\n</string>
    <string name="digits_alpha_numeric_special_char_no_space">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="digits_with_restriction">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890[-!@#$%^&amp;*()_+|~=`\\\{}\[\]:\";\'&lt;&gt;?,.\/]</string>
    <string name="digits_with_restriction_with_space">\ abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890[-!@#$%^&amp;*()_+|~=`\\\{}\[\]:\";\'&lt;&gt;?,.\/]</string>
    <string name="digits_website">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890[-@.,?:\/]</string>
    <string name="digits_special_characters">[-!@#$%^&amp;*()_+|~=`\\\{}\[\]:\";\'&lt;&gt;?,.\/]</string>
    <string name="use_password">Use password</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>
    <string name="fingerprint_attempt">Too many attempts. Try again later or you may use password.</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">
        A new fingerprint was added to this device, so your password is required.
    </string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="register_fingerprint">
        Go to \'Settings -> Security -> Fingerprint\' and register at least one fingerprint
    </string>
    <string name="setup_lock_screen">
        Secure lock screen hasn\'t set been up.\n
        Go to \'Settings -> Security -> Fingerprint\' to set up a fingerprint
    </string>
    <string name="title_scan_your_signature">Scan your Signature</string>
    <string name="msg_scan_your_signature">Place signature within the frame. Tap on the button when you\'re ready to take the photo. Please ensure that the signature is against a white background and that the image taken is not blurry.</string>
    <string name="title_frame_one">On-The-Go</string>
    <string name="title_frame_two">Safety First!</string>
    <string name="title_frame_three">All-In-One</string>
    <string name="title_password">Password</string>
    <string name="title_enable_otp">Enable/Disable OTP</string>
    <string name="title_receive_otp">How you receive OTP</string>
    <string name="title_generate_otp">Generate OTP</string>
    <string name="title_tab_accounts">ACCOUNTS</string>
    <string name="title_tab_transact">TRANSACT</string>
    <string name="title_tab_approvals">APPROVALS</string>
    <string name="title_tab_settings">SETTINGS</string>
    <string name="title_tab_notifications">ALERTS</string>
    <string name="title_menu_help">Help</string>
    <string name="title_menu_flash">Flash</string>
    <string name="title_filter">Filter</string>
    <string name="action_edit">Edit</string>
    <string name="action_submit">Submit</string>
    <string name="action_select_all">Select All</string>
    <string name="action_crop">Crop</string>
    <string name="action_retake">Retake</string>
    <string name="numbering_f">f.&#160;</string>
    <string name="numbering_e">e.&#160;</string>
    <string name="numbering_d">d.&#160;</string>
    <string name="numbering_c">c.&#160;</string>
    <string name="numbering_b">b.&#160;</string>
    <string name="numbering_a">a.&#160;</string>
    <string name="tc_aapop_content_1">The Bank shall have the duty to credit Customers payments into the Merchant’s Nominated Settlement Account subject to the following conditions:</string>
    <string name="tc_aapop_content_1a">The Bank’s actual receipt of the funds from the Customer;</string>
    <string name="tc_aapop_content_1b">The amount to be credited shall be subject to deductions as agreed upon by the Parties;</string>
    <string name="tc_aapop_content_1c">For the use of facilities which require enrollment, such as the Bank\'s or a Partner Channel\'s mobile, online or other facility, the Customer is enrolled in the said facility;</string>
    <string name="tc_aapop_content_1d">The submission by the Customer of all required information to the Bank or the Bank\'s Partner Channel in the form required by the Bank or Partner-Channel, as the case may be;</string>
    <string name="tc_aapop_content_1e">Where applicable, Registered Merchant shall: (i) honor without discrimination, all valid and unexpired Cards and/or accounts used by bona fide Card/Accountholders in the purchase of goods and/or services via the internet; (ii) honor Cards in the purchase of goods/services under the Bank\'s credit card installment plan, if any; (iii) participate in loyalty or promotional programs, which may be developed and implemented by the Bank for its Cards. Unless otherwise instructed by the Bank, there should be no minimum or maximum amount requirement for every card transaction.</string>
    <string name="tc_cadp_content_1">Parties agree that Confidential Information exchanged shall be kept confidential and shall not be disclosed or given to any third party during and after the expiry or termination of this Agreement without the prior written consent of the disclosing party. The aforementioned undertaking does not apply to information:</string>
    <string name="tc_cadp_content_1a">already known or independently obtained by the receiving party;</string>
    <string name="tc_cadp_content_1b">publicly known or becomes publicly known through no breach of this Agreement; or</string>
    <string name="tc_cadp_content_1c">required to be disclosed pursuant to a lawful order of a court or government agency, provided the receiving party provides the other party with written notice of such order prior to disclosure and within such time as to allow the other party reasonable opportunity to oppose such disclosure before a court or agency of competent jurisdiction.</string>
    <string name="tc_cadp_content_2">Merchant hereby also agrees to maintain the privacy of all Merchants and details of Customers in performance of its obligations hereunder in accordance with prevailing laws.</string>
    <string name="tc_cadp_content_3">The Parties shall use or permit to use Confidential Information solely in connection with the Service and not for its own or any third-party benefit provided that the Parties shall be entitled to disclose Confidential Information to those of its employees and contractors, if any, to whom and to the extent such disclosure is reasonably necessary for the purposes of this Agreement. The responsibility of such disclosures and the liability of making such disclosures shall be exclusively on the party making such disclosures.</string>
    <string name="tc_cadp_content_4">The obligation to protect Confidential Information under this clause shall survive any expiry or termination of this Agreement.</string>
    <string name="tc_cadp_content_5">Data Privacy Compliance</string>
    <string name="tc_cadp_content_5a">Both Parties warrant and agree that it shall ensure the protection of the data privacy rights of the Customers, or individuals whose personal, sensitive personal, or privileged information is controlled by or processed by Merchant on its own or through its representatives, in the implementation of this Agreement. Pursuant thereto, both Parties agree to comply with the Data Privacy Act of 2012 and all applicable and relevant laws, their respective implementing rules and regulations and data privacy protection rules and policies being implemented or to be implemented by the National Privacy Commission. In line therewith, each Party warrants and represents that it has in place and is implementing all the organizational, physical and technical security measures for the protection of Personal Information and/or Sensitive Personal</string>
    <string name="tc_cadp_content_5b">Information required under the Data Privacy Act, and any additional or specific measures required by the data privacy protection rules and policies being implemented or to be implemented;</string>
    <string name="tc_cadp_content_5c">Both Parties shall take all the steps necessary to ensure that any person acting under its authority and who has access to Personal Information and/or Sensitive Personal Information of Customers processed, does not process them except upon Merchant’s instructions, or in accordance with applicable law. Notwithstanding anything to the contrary, the Bank shall be the Personal Information Processor as defined under the Data Privacy Act of 2012;</string>
    <string name="tc_cadp_content_5d">Each Party shall defend, indemnify, and hold the other Party, its affiliates, and their respective officers, directors, stockholders, employees, and agents harmless from and against any and all claims, suits, causes of action, liability, loss, costs, and damages, including attorney’s fees and costs of litigation, in connection with or as a result of any third party claim arising from the personal data breach of any Party directly attributable from acts or omissions resulting in the violation of the Data Privacy Act;</string>
    <string name="tc_cadp_content_5e">Each Party shall at all times be responsible for ensuring that the Personal Information and/or Sensitive Personal Information, in whatever form, is stored securely and hereby agrees to implement security measures to maintain the confidentiality, integrity, and availability of the Personal Information and/or Sensitive Personal Information; and protect it from accidental or unlawful destruction, alteration and unauthorized disclosure, unlawful processing or use, fraudulent misuse, or loss or destruction while in the Party’s custody; and</string>
    <string name="tc_cadp_content_5f">In case of any judicial order, governmental action, or legal obligation requiring any Party to disclose Personal Information and/or Sensitive Personal Information of Customer, the Party shall immediately inform the other. Each Party shall support and cooperate in the intervention of the Party in addressing the judicial order, governmental action, or legal obligation, or minimizing the scope of the disclosure.</string>
    <string name="save_and_exit">Save and Exit</string>
</resources>